<resources>
    <string name="app_name">QuickStudy</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="app_info">App Info</string>
    <string name="app_contact">Contact Us</string>
    <string name="app_help">Help</string>
    <string name="app_filter">Filter</string>
    <string name="app_google">Map</string>
    <string name="find_session">Find Session</string>
    <string name="create_session">Create Session</string>


    <string name="endtag">CENG319 © CENGBOIZ 2017</string>

    <string name="name_create">Name</string>
    <string name="subject_create">Subject (Max 20 chars.)</string>
    <string name="subject_spinner">Subject</string>
    <string name="info_create">Additional Info (Max 40 chars.)</string>
    <string name="time_create">Select Time Closure</string>
    <string name="post_create">POST</string>
    <string name="post_validation">Please fill out everything including the time closure.\n Additional Info is optional.</string>
    <string name="post_info">Post Information</string>
    <string name="continue_button">CONTINUE</string>
    <string name="wrong_post">Not the post you are looking at? Click here to go back</string>
    <string name="Recurring_Event">Recurring Scheduler</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_recurring">Select the days you would like to schedule a study session</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Switch between English and French</string>
    <string name="pref_description_social_recommendations">switching on will change language to French
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New notifications on study session</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--<string-array name="subjects">
        <item>Science</item>
        <item>Math</item>
        <item>Design and Technology</item>
        <item>History</item>
        <item>Geography</item>
        <item>Art and Design</item>
        <item>Music</item>
        <item>Phys. Ed</item>
        <item>English</item>
        <item>Religion</item>
    </string-array>-->
</resources>
